[package]
name = "double-blind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
num = { version = "0.4.3", features = ["num-bigint"] }
plonky2 = "1.1.0"
plonky2_rsa = { git = "https://github.com/dgulotta/plonky2-rsa.git" }
plonky2_u32 = { git = "https://github.com/dgulotta/plonky2-u32.git" }
sha2 = "0.10.9"
